[tool.poetry]
name = "cs484-f2023-finalproj"
version = "0.1.0"
description = ""
authors = ["Rohan Sarvaria <rsarvaria@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
torchvision = "^0.16.2"
matplotlib = "^3.8.2"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.340"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
